# requencer

./: .git-blame-ignore-revs  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  index.html  knip.json  package-lock.json  package.json  panel-layout.json
.github/workflows/: atopile.yml  deploy.yml  docker-hw-tools.yml  preview-cleanup.yml  preview.yml  quality.yml
assets/: assembly-viewer-BCGaecZ3.js  assembly-viewer-BHrbSgOt.js  assembly-viewer-BavA1Hnj.js  assembly-viewer-CG9tlVCs.js  assembly-viewer-CJIBxPV0.js  assembly-viewer-CN9CkvbM.js  index--iE7vFlK.js  index-7AbCWGH9.js  index-B-TriiKT.js  index-BTwWvlOe.js  index-Bjk2Boiy.js  index-C45OxN03.js  index-CFqvuXop.js  index-CR0d7c4q.js  index-CSVUXC8E.js  index-CqNZNlUP.js  index-DCu9Z1Er.js  index-DV4mOF_j.js  index-DZuqH-wP.js  index-DoLThMyd.js  index-RfVG7xwu.js  index-Wrbpyd9u.js  index-YvfBgaq9.js  index-cAdEc6aa.js  index-da2S9y2G.js  index-ytOxiWQ_.js  requencer_web-C2B3b1oz.js  requencer_web-GcJyVaxM.js  requencer_web-qCEO8izG.js  requencer_web_bg-ls4vl5Di.wasm
crates/engine/: Cargo.toml
crates/firmware/: Cargo.toml  build.rs  memory.x
crates/firmware/src/: buttons.rs  clock_io.rs  cv_input.rs  cv_output.rs  dac.rs  display.rs  encoders.rs  leds.rs  lib.rs  main.rs  midi.rs  pins.rs  storage.rs  tick.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: colors.rs  draw.rs  layout.rs  lib.rs  types.rs
crates/renderer/src/screens/: gate_edit.rs  home.rs  mod.rs  mod_edit.rs  mutate_edit.rs  mute_edit.rs  name_entry.rs  pattern.rs  pattern_load.rs  pitch_edit.rs  rand.rs  route.rs  settings.rs  transpose_edit.rs  variation_edit.rs  vel_edit.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
docs/: README.md  production-check.md
docs/archive/: 2026-02-22-requencer-design.md  2026-02-24-routing-page-design.md  2026-02-24-routing-page-plan.md  2026-03-02-ui-improvements-design.md  2026-03-03-global-settings-plan.md  2026-03-03-lfo-mod-redesign.md  2026-03-03-live-playback-indicators-design.md  2026-03-03-variations-design.md  2026-03-03-variations-plan.md  2026-03-06-hardware-docker-toolchain-design.md  2026-03-06-missing-hardware-components-design.md  2026-03-06-missing-hardware-components.md  2026-03-06-qfn-rp2350-research.md  2026-03-10-illuminated-button-selection.md  2026-03-10-pcb-design-validation-report.md  2026-03-16-placement-clustering-design.md  2026-03-16-placement-clustering.md  2026-03-16-qfn-aware-placement-design.md  2026-03-16-qfn-aware-placement.md  flux-ai-prompt.md  hardware-prototype-options.md  hardware-strategy.md  rust-wasm-engine-renderer.md  storage-options.md
docs/plans/: 2026-02-22-requencer-design.md  2026-02-28-panel-layout-fixes-design.md  2026-02-28-panel-layout-fixes-plan.md  2026-02-28-panel-layout-plan.md  2026-02-28-panel-layout-redesign.md  2026-03-01-feature-roadmap.md  2026-03-02-ui-improvements-plan.md  2026-03-03-gate-modes-redesign.md  2026-03-03-global-settings-design.md  2026-03-03-live-playback-indicators.md  2026-03-03-quality-audit.md  2026-03-06-firmware-implementation.md  2026-03-06-hardware-docker-toolchain.md  2026-03-06-persistence-design.md  2026-03-06-persistence.md  2026-03-06-rp2350-memory-constraints.md  2026-03-07-hardware-pipeline-remaining-todos.md  2026-03-12-main-board-resize.md  2026-03-13-parallel-placement-optimization.md  2026-03-21-production-check-implementation.md  2026-03-21-production-check-skill.md  pcb-stacking-restructure.md  rust-engine-remaining-todos.md
docs/reports/: production-check-2026-03-23.md  production-check-2026-03-24.md  production-check-2026-03-25.md
docs/research/: 2026-03-06-qfn-rp2350-research.md  2026-03-07-github-actions-autoroute-timeout.md  3d-assembly-viewer.md  3d-preview-rendering.md  aliexpress-parts-sourcing.md  china-pcb-ordering.md  component-mounting-depths.md  continuous-cv-outputs.md  eurorack-dimensions.md  eurorack-mechanical-standards.md  eurorack-pcb-best-practices.md  faceplate-connectors.md  faceplate-hole-sizing.md  feature-ideas.md  flux-ai-prompt-v2.md  hardware-strategy.md  pcb-placement-review.md  pcb-stacking.md  placer-api-design.md  rust-wasm-engine-renderer.md  schematic-review-2026-03-16.md  sequencer-comparison.md  storage-options.md  thermal-placement-analysis.md  ui-design-notes.md
hardware/: .gitignore  Makefile  ato.yaml  component-map.json
hardware-faceplate/: ato.yaml
hardware-faceplate/scripts/: generate_faceplate.py
hardware/boards/: .gitignore  README.md  ato.yaml  board-config.json  component-map.json  design-rules.json
hardware/docker/: Dockerfile  patch-strict-picker.py
hardware/manufacturing/: jlcpcb-bom.csv  jlcpcb-cpl.csv
hardware/pcb/: component-map.json
hardware/scripts/: autoroute.sh  export_dsn.py  export_layout.py  export_manufacturing.py  generate_footprints.py  place_components.py  preflight_check.py
models/: faceplate.glb  stack-up.json
pr-10/: index.html
pr-10/assets/: index-BRDOwqFy.js  index-D-_BOEZG.js  index-DP3_JCqT.js  index-DzJJpy4k.js  index-h_R_nchY.js
pr-11/: index.html
pr-11/assets/: index-Bt_FFCMK.js
pr-12/: index.html
pr-12/assets/: index-D_NiDi0A.js
pr-13/: index.html
pr-14/: index.html
pr-15/: index.html
pr-16/: index.html
pr-17/: index.html
pr-18/: index.html
pr-19/: index.html
pr-2/: index.html
pr-20/: index.html
pr-21/: index.html
pr-22/: index.html
pr-23/: index.html
pr-24/: index.html
pr-25/: index.html
pr-26/: index.html
pr-27/: index.html
pr-28/: index.html
pr-29/: index.html
pr-3/: index.html
pr-30/: index.html
pr-31/: index.html
pr-32/: index.html
pr-33/: index.html
pr-34/: index.html
pr-35/: index.html
pr-36/: index.html
pr-37/: index.html
pr-38/: index.html
pr-39/: index.html
pr-4/: index.html
pr-40/: index.html
pr-41/: index.html
pr-42/: index.html
pr-43/: index.html
pr-44/: index.html
pr-5/: index.html
pr-6/: index.html
pr-7/: index.html
pr-8/: index.html
pr-9/: index.html
src/: main.ts
web/: biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
(+760 files in other folders)
