[workspace]
members = ["crates/*"]
# Exclude firmware from default operations (cargo test, cargo check) because it
# requires the thumbv8m.main-none-eabihf target. Build explicitly with:
#   cargo build -p requencer-firmware --target thumbv8m.main-none-eabihf
exclude = ["crates/firmware"]
resolver = "2"

[workspace.dependencies]
embedded-graphics-core = "0.4"
embedded-graphics = "0.8"
heapless = { version = "0.8", features = ["serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }
