[package]
name = "requencer-firmware"
version = "0.1.0"
edition = "2021"

# Firmware targets the RP2350B (PGA2350 module, Cortex-M33).
# Install toolchain: rustup target add thumbv8m.main-none-eabihf
# Build: cargo build -p requencer-firmware --target thumbv8m.main-none-eabihf --release

[dependencies]
# Our crates (no_std)
requencer-engine = { path = "../engine", default-features = false }
requencer-renderer = { path = "../renderer", default-features = false }

# Embassy (RP2350)
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread"] }
embassy-rp = { version = "0.4", features = ["rp235xb"] }
embassy-time = { version = "0.4" }
embassy-sync = { version = "0.7" }
embassy-embedded-hal = { version = "0.3" }
embassy-futures = { version = "0.1" }

# Embedded HAL
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.3", features = ["async"] }

# Display
mipidsi = "0.9"
display-interface-spi = "0.5"

# Runtime
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"

# Embedded graphics (for DrawTarget in framebuffer)
embedded-graphics-core = { workspace = true }
embedded-graphics = { workspace = true }

# no_std math
libm = "0.2"

# Collections
heapless = { workspace = true }

# Allocator for no_std (required by postcard alloc feature in engine crate)
embedded-alloc = "0.6"

# Static cell for shared resources
static_cell = "2"
portable-atomic = { version = "1", features = ["critical-section"] }

[features]
default = []
