[package]
name = "requencer-renderer"
version = "0.1.0"
edition = "2021"

[features]
default = []
std = []

[dependencies]
requencer-engine = { path = "../engine", default-features = false }
embedded-graphics-core = { workspace = true }
embedded-graphics = { workspace = true }
heapless = { workspace = true }
libm = "0.2"
