[package]
name = "requencer-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
requencer-engine = { path = "../engine" }
requencer-renderer = { path = "../renderer" }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageData",
]
