[package]
name = "requencer-web"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = ["requencer-engine/std", "requencer-renderer/std"]

[dependencies]
requencer-engine = { path = "../engine" }
requencer-renderer = { path = "../renderer" }
embedded-graphics-core = { workspace = true }
heapless = { workspace = true }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageData",
]
